DEV-309: Fixed tests!